apps/media/sonarr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  serviceName: sonarr
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsUser: 1029
        runAsGroup: 65537
        fsGroup: 65537
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: sonarr
          image: ghcr.io/home-operations/sonarr:4.0.20.3012
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
              name: http
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media-storage
              mountPath: /media
          resources:
            requests:
              cpu: 813m
              memory: 380Mi
            limits:
              memory: 692Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - SETUID
                - SETGID
                - CHOWN
            readOnlyRootFilesystem: false
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 120
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
      volumes:
        - name: media-storage
          persistentVolumeClaim:
            claimName: media-storage
  volumeClaimTemplates:
    - metadata:
        name: config
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: linstor-r3
        resources:
          requests:
            storage: 2Gi
