apps/media/sonarr/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-api
  namespace: media
  labels:
    app: sonarr
  annotations:
    external-dns.alpha.kubernetes.io/expose: "true"
    external-dns.alpha.kubernetes.io/target: traefik.i.recompiled.org
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.i.recompiled.org`) && PathPrefix(`/api`)
      kind: Rule
      priority: 100
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: sonarr-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr-web
  namespace: media
  labels:
    app: sonarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sonarr.i.recompiled.org`)
      kind: Rule
      priority: 50
      services:
        - name: sonarr
          port: 8989
      middlewares:
        - name: oauth2-proxy
          namespace: auth
  tls:
    secretName: sonarr-tls
